# neurosaber-backend

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: main_neurosaber-backend.yml
app/: context.py  dependencies.py  dependency_registry.py  exceptions.py  main.py  routers.py
app/core/: advanced_filtering.py  auth.py  config.py  logging.py  scheduler.py
app/core/events/: __init__.py  event_bus.py  events.py  handlers.py
app/database/sql/: base.py  filters.py  mixins.py
app/migrations/: env.py
app/migrations/versions/: 2026_02_22_1259-499ed575b654_initialize_db.py
app/modules/: db.py
app/modules/certificate/: admin_routers.py  dependencies.py  filters.py  models.py  repository.py  routers.py  schemas.py  service.py
app/repositories/: __init__.py  base_repository.py  clauses.py  exceptions.py  sql_repository.py
app/services/aws/: s3_service.py
app/services/guru/: client.py  schemas.py
app/services/pdf/: service.py
tests/: conftest.py  factories.py
tests/integration/: conftest.py  test_api.py  test_repositories.py
tests/unit/: test_auth.py  test_certificate_service.py  test_guru_client.py  test_schemas.py
